# TensorFlowTTS

./: pyproject.toml  setup.cfg  setup.py  tox.ini
examples/android/app/: build.gradle
examples/android/gradle/wrapper/: gradle-wrapper.properties
tensorflow_tts/processor/: base_processor.py  libritts.py
