[aliases]
test=pytest

[tool:pytest]
addopts = --verbose --durations=0
testpaths = test

[flake8]
ignore = H102W504H238D104H306H405D205
# 120 is a workaround 79 is good
max-line-length = 120

[options]
# TODO(@dathudeptrai) update requirement if needed.
packages = mypackage
install_requires =
    tensorflow-gpu==2.4.1
    tensorflow-addons>=0.12.0
    setuptools>=38.5.1
    librosa>=0.7.0
    soundfile>=0.10.2
    matplotlib>=3.1.0
    PyYAML>=3.12
    tqdm>=4.26.1
    h5py>=2.10.0
    unidecode>=1.1.1
    inflect>=4.1.0
    scikit-learn>=0.22.0
    pyworld>=0.2.10
    numba<=0.48  # Fix No module named numba.decorators
    jamo>=0.4.1
    pypinyin
    g2pM
    textgrid
    click
    g2p_en
    dataclasses
    german_transliterate @ git+https://github.com/repodiac/german_transliterate.git#egg=german_transliterate

setup =
    numpy
    pytest-runner

test =
    pytest>=3.3.0
    hacking>=1.1.0
