[metadata]
name = TensorFlowTTS
version = 0.0
url = https://github.com/tensorspeech/TensorFlowTTS
author=Minh Nguyen Quan Anh, Eren Gölge, Kuan Chen, Dawid Kobus, Takuya Ebata, Trinh Le Quang, Yunchao He, Alejandro Miguel Velasquez
author_email=nguyenquananhminh@gmail.com
description = TensorFlowTTS: Real-Time State-of-the-art Speech Synthesis for Tensorflow 2
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Intended Audience :: Science/Research
    Operating System :: POSIX :: Linux
    License :: OSI Approved :: Apache Software License
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
include = tensorflow_tts*

# TODO(@dathudeptrai) update requirement if needed.
install_requires = 
    PyYAML>=3.12
    click
    dataclasses
    g2pM
    g2p_en
    german_transliterate @ git+https://github.com/repodiac/german_transliterate.git#egg=german_transliterate
    h5py>=2.10.0
    huggingface_hub=0.0.8
    inflect>=4.1.0
    jamo>=0.4.1
    librosa>=0.7.0
    matplotlib>=3.1.0
    numba<=0.48  # Fix No module named numba.decorators
    pypinyin
    pyworld>=0.2.10
    scikit-learn>=0.22.0
    setuptools>=38.5.1
    soundfile>=0.10.2
    tensorflow-addons>=0.12.0
    tensorflow==2.4.1
    textgrid
    tqdm>=4.26.1
    unidecode>=1.1.1

[options.extras_require]
test = pytest>=3.3.0; hacking>=1.1.0

[options.entry_points]
console_scripts =
    tensorflow-tts-preprocess = tensorflow_tts.bin.preprocess:preprocess
    tensorflow-tts-compute-statistics = tensorflow_tts.bin.preprocess:compute_statistics
    tensorflow-tts-normalize = tensorflow_tts.bin.preprocess:normalize

[aliases]
test=pytest

[tool:pytest]
addopts = --verbose --durations=0
testpaths = test

[flake8]
ignore = H102W504H238D104H306H405D205
# 120 is a workaround 79 is good
max-line-length = 120
